# libmk2

./: CMakeLists.txt  README.md  mk2.hpp
include/: mk2.hpp
include/mk2/: algorithm.hpp  debug.hpp  filesystem.hpp  iterator.hpp  math.hpp  pointer.hpp  range.hpp  rx.hpp  stream.hpp  thread.hpp  utility.hpp
mk2/: chrono.hpp  container.hpp  debug.hpp  easing.hpp  filesystem.hpp  gl.hpp  iterator.hpp  pointer.hpp  preprocessor.hpp  range.hpp  simd.hpp  string.hpp  tuple.hpp
mk2/algorithm/: clamp.hpp  singleton.hpp
mk2/chrono/: fps_counter.hpp
mk2/container/: array.hpp  container_traits.hpp  fixed_array.hpp
mk2/debug/: build_type.hpp
mk2/easing/: back.hpp  bounce.hpp  circular.hpp  cubic.hpp  easing.hpp  elastic.hpp  exponential.hpp  linear.hpp  quadratic.hpp  quart.hpp  quint.hpp  sine.hpp
mk2/filesystem/: config.hpp  glob.hpp  path.hpp
mk2/gl/: gl_include.hpp  pipeline.hpp  shader_program.hpp
mk2/iterator/: advance.hpp  begin.hpp  data.hpp  empty.hpp  end.hpp  index_iterator.hpp  select_iterator.hpp  size.hpp  type_traits.hpp  value_transform_iterator.hpp
mk2/math/: acos.hpp  asin.hpp  binomial_coefficient.hpp  constants.hpp  decibel.hpp  exp.hpp  factorial.hpp  isnan.hpp  lagerp.hpp  lerp.hpp  log2.hpp  mod.hpp  pow.hpp  sqrt.hpp  sync.hpp  tan.hpp  theta_mod.hpp
mk2/pointer/: ref_ptr.hpp
mk2/preprocessor/: template_wrapper.hpp
mk2/range/: adaptor.hpp  sampler.hpp
mk2/simd/: intrin.hpp  ipp.hpp
mk2/simd/ipp/: fft.hpp  (+14 more)
mk2/string/: convert.hpp
mk2/thread/: scoped_thread.hpp
test/: easing.hpp  ipp.hpp  main.cpp
utility/: make_include.cpp
(+152 files in other folders)
